--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@capitalsetu/cspl-models",
-  "version": "1.0.2",
+  "name": "@thaparrakshan/cspl-models",
+  "version": "0.0.1",
   "description": "A repository to host all the models of capital setu",
   "main": "index.js",
   "scripts": {
