--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,8 +25,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          NODE_AUTH_TOKEN: ${{secrets.NPM_SECRET}}
           registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_SECRET}}
           
