--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": ""
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org"
+    "registry": "https://npm.pkg.github.com/"
   },
   "author": "phyniks",
   "license": "ISC",
