--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
      "build": "nest build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rakshan1996/package_build.git"
+  },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@rakshan1996"
   },
