--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rakshan1996/csplmodels",
+  "name": "@rakshan1996/Test_Package",
   "version": "0.0.2",
   "description": "A repository to host all the models of capital setu",
   "main": "index.js",
